--- a/MyResume/index.html
+++ b/MyResume/index.html
@@ -85,14 +85,13 @@
 
         <div class="row">
           <div class="col-lg-4">
-            <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
+            <img src="assets/img/i-dBKmTdg-S.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
-            <h3>UI/UX Designer &amp; Web Developer.</h3>
+            <h3>Front &amp; Back End Software Developer.</h3>
             <p class="font-italic">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-              dolore
-              magna aliqua.
+              Experience making applications in the full stack including client side user interaction, creating RESTful
+              API's, creating data models and querying databases.
             </p>
             <div class="row">
               <div class="col-lg-6">
