--- a/MyResume/index.html
+++ b/MyResume/index.html
@@ -140,15 +140,21 @@
           </div>
         </div> -->
 
-        <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
-          <div class="col-10 col-md-8"></div>
-          <div class="col-10 col-md-8"></div>
-          <div class="col-10 col-md-8"></div>
+        <div class="row justify-content-center" data-aos="fade-up" data-aos-delay="200">
+          <div class="col-10 col-md-8 card shadow my-4">
+            <h4 class="text-center">LENDME</h4>
+          </div>
+          <div class="col-10 col-md-8 card shadow my-4">
+            <h4 class="text-center">INSPIRE</h4>
+          </div>
+          <div class="col-10 col-md-8 card shadow my-4">
+            <h4 class="text-center">BUG LOG</h4>
+          </div>
 
 
 
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -210,9 +216,9 @@
               </div>
             </div>
           </div>
-        </div>
+        </div> -->
 
-      </div>
+        </div>
     </section><!-- End Portfolio Section -->
 
     <!-- ======= Skills Section ======= -->
