added project descriptions

--- a/MyResume/index.html
+++ b/MyResume/index.html
@@ -142,13 +142,75 @@
 
         <div class="row justify-content-center" data-aos="fade-up" data-aos-delay="200">
           <div class="col-10 col-md-8 card shadow my-4">
-            <h4 class="text-center">LENDME</h4>
+            <h4 class="text-center mt-2">LENDME</h4>
+            <p>
+              <strong>
+                Website:
+              </strong>
+              <a href="https://lend-me-dels.herokuapp.com/#/">https://lend-me-dels.herokuapp.com/#/</a>
+              <br>
+              <strong>
+                Github:
+              </strong>
+              <a href="https://github.com/davidparker83686/capstone">https://github.com/davidparker83686/capstone</a>
+            </p>
+            <p>
+              <strong>
+                Built with:
+              </strong>
+            </p>
+            <ul>
+              <li>Vue.js</li>
+              <li>Node.js</li>
+              <li>Mongoose</li>
+              <li>MongoDb</li>
+              <li>Axios</li>
+              <li>Bootstrap</li>
+              <li>MVCS Design Pattern</li>
+            </ul>
+            <p>
+              This application was built as a group project for Codeworks, and our group completed the app in about two
+              weeks. We used regex search functionality, geospatial queries with GeoJSON, and many to many data
+              relationships in our application. The core functionality of the app involved users listing items as
+              available to be borrowered, and other user's could request to borrow an item. Our group also included a
+              two way rating system to rate the borrower as well as the lender. The application was made with a Vue.js
+              front end, Node.js back end and Mongoose/MongoDb for the ORM and database respectively.
+            </p>
           </div>
           <div class="col-10 col-md-8 card shadow my-4">
             <h4 class="text-center">INSPIRE</h4>
+            <p>
+              <strong>
+                Website:
+              </strong>
+              <a href="https://lend-me-dels.herokuapp.com/#/">https://lend-me-dels.herokuapp.com/#/</a>
+              <br>
+              <strong>
+                Github:
+              </strong>
+              <a href="https://github.com/davidparker83686/capstone">https://github.com/davidparker83686/capstone</a>
+            </p>
+            <p>
+              <strong>
+                Built with:
+              </strong>
+            </p>
+            <ul>
+              <li>Javascript</li>
+              <li>Bootstrap</li>
+              <li>Axios</li>
+              <li>MVCS Design Pattern</li>
+            </ul>
+            <p>
+              This was an independent application that was one of our weekend assignments at Codeworks. It was a single
+              page that included a clock with date and time, a to do list, weather, and a new qoute displayed to the
+              page every day. It was a front end application in Vanilla Javascript that uses Axios to make requests to
+              API's to access weather information and a daily quote.
+            </p>
           </div>
           <div class="col-10 col-md-8 card shadow my-4">
             <h4 class="text-center">BUG LOG</h4>
+
           </div>
 
 
