--- a/MyResume/index.html
+++ b/MyResume/index.html
@@ -219,80 +219,58 @@
             <div class="section-title">
               <h2>Skills</h2>
             </div>
-
-            <div class="row skills-content">
-
-              <div class="col-lg-6">
-
-                <div class="progress">
-                  <span class="skill">HTML <i class="val">100%</i></span>
-                  <div class="progress-bar-wrap">
-                    <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0"
-                      aria-valuemax="100">
-                    </div>
-                  </div>
+            <div class="row skills-content justify-content-around">
+              <div class="card-columns">
+                <div class="card mx-2 my-3 shadow">
+                  <img src="./assets/img/JavaScript-Logo.png" class="w-100 my-3" alt="">
+                  <h3 class="mx-2">Javascript</h3>
                 </div>
-
-                <div class="progress">
-                  <span class="skill">CSS <i class="val">90%</i></span>
-                  <div class="progress-bar-wrap">
-                    <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0"
-                      aria-valuemax="100">
-                    </div>
-                  </div>
+                <div class="card mx-2 my-3 shadow">
+                  <img src="./assets/img/logo-vuejs.png" class="w-100 my-3" alt="">
+                  <h3 class="mx-2">Vue.js</h3>
                 </div>
-
-                <div class="progress">
-                  <span class="skill">JavaScript <i class="val">75%</i></span>
-                  <div class="progress-bar-wrap">
-                    <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0"
-                      aria-valuemax="100">
-                    </div>
-                  </div>
+                <div class="card mx-2 my-3 shadow">
+                  <img src="./assets/img/logo-dot-net.png" class="w-100 my-3" alt="">
+                  <h3 class="mx-2">C# .NET</h3>
                 </div>
-
+                <div class="card mx-2 my-3 shadow">
+                  <img src="./assets/img/nodejs.jpg" class="w-100 my-3" alt="">
+                  <h3 class="mx-2">Node.js</h3>
+                </div>
+                <div class="card mx-2 my-3 shadow">
+                  <img src="./assets/img/mongodb.png" class="w-100 my-3" alt="">
+                  <h3 class="mx-2">Mongoose/MongoDb</h3>
+                </div>
+                <div class="card mx-2 my-3 shadow">
+                  <img src="./assets/img/mysql-logo-1.png" class="w-100 my-3" alt="">
+                  <h3 class="mx-2">MySQL</h3>
+                </div>
+                <div class="card mx-2 my-3 shadow">
+                  <img src="./assets/img/bootstrap.png" class="w-100 my-3" alt="">
+                  <h3 class="mx-2">Bootstrap</h3>
+                </div>
+                <div class="card mx-2 my-3 shadow">
+                  <img src="./assets/img/html5logo.png" class="w-100 my-3" alt="">
+                  <h3 class="mx-2">HTML</h3>
+                </div>
+                <div class="card mx-2 my-3 shadow">
+                  <img src="./assets/img/css-3-logo.png" class="w-100 my-3" alt="">
+                  <h3 class="mx-2">CSS</h3>
+                </div>
+                <div class="card mx-2 my-3 shadow">
+                  <img src="./assets/img/scrum-alliance-logo.png" class="w-100 my-3" alt="">
+                  <h3 class="mx-2">SCRUM/AGILE</h3>
+                </div>
               </div>
-
-              <div class="col-lg-6">
-
-                <div class="progress">
-                  <span class="skill">PHP <i class="val">80%</i></span>
-                  <div class="progress-bar-wrap">
-                    <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0"
-                      aria-valuemax="100">
-                    </div>
-                  </div>
-                </div>
-
-                <div class="progress">
-                  <span class="skill">WordPress/CMS <i class="val">90%</i></span>
-                  <div class="progress-bar-wrap">
-                    <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0"
-                      aria-valuemax="100">
-                    </div>
-                  </div>
-                </div>
-
-                <div class="progress">
-                  <span class="skill">Photoshop <i class="val">55%</i></span>
-                  <div class="progress-bar-wrap">
-                    <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0"
-                      aria-valuemax="100">
-                    </div>
-                  </div>
-                </div>
-
-              </div>
-
             </div>
 
           </div>
-        </section><!-- End Skills Section -->
+        </section><!-- End Skills Section-->
 
         <!-- ======= Resume Section ======= -->
 
         <!-- ======= Services Section ======= -->
-        <section id="services" class="services">
+        <!-- <section id="services" class="services">
           <div class="container" data-aos="fade-up">
 
             <div class="section-title">
@@ -400,10 +378,10 @@
             </div>
 
           </div>
-        </section><!-- End Services Section -->
+        </section>End Services Section -->
 
         <!-- ======= Testimonials Section ======= -->
-        <section id="testimonials" class="testimonials section-bg">
+        <!-- <section id="testimonials" class="testimonials section-bg">
           <div class="container" data-aos="fade-up">
 
             <div class="section-title">
@@ -477,81 +455,7 @@
             </div>
 
           </div>
-        </section><!-- End Testimonials Section -->
-
-        <!-- ======= Contact Section ======= -->
-        <section id="contact" class="contact">
-          <div class="container" data-aos="fade-up">
-
-            <div class="section-title">
-              <h2>Contact</h2>
-            </div>
-
-            <div class="row mt-1">
-
-              <div class="col-lg-4">
-                <div class="info">
-                  <div class="address">
-                    <i class="icofont-google-map"></i>
-                    <h4>Location:</h4>
-                    <p>A108 Adam Street, New York, NY 535022</p>
-                  </div>
-
-                  <div class="email">
-                    <i class="icofont-envelope"></i>
-                    <h4>Email:</h4>
-                    <p>info@example.com</p>
-                  </div>
-
-                  <div class="phone">
-                    <i class="icofont-phone"></i>
-                    <h4>Call:</h4>
-                    <p>+1 5589 55488 55s</p>
-                  </div>
-
-                </div>
-
-              </div>
-
-              <div class="col-lg-8 mt-5 mt-lg-0">
-
-                <form action="forms/contact.php" method="post" role="form" class="php-email-form">
-                  <div class="form-row">
-                    <div class="col-md-6 form-group">
-                      <input type="text" name="name" class="form-control" id="name" placeholder="Your Name"
-                        data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
-                      <div class="validate"></div>
-                    </div>
-                    <div class="col-md-6 form-group">
-                      <input type="email" class="form-control" name="email" id="email" placeholder="Your Email"
-                        data-rule="email" data-msg="Please enter a valid email" />
-                      <div class="validate"></div>
-                    </div>
-                  </div>
-                  <div class="form-group">
-                    <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject"
-                      data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" />
-                    <div class="validate"></div>
-                  </div>
-                  <div class="form-group">
-                    <textarea class="form-control" name="message" rows="5" data-rule="required"
-                      data-msg="Please write something for us" placeholder="Message"></textarea>
-                    <div class="validate"></div>
-                  </div>
-                  <div class="mb-3">
-                    <div class="loading">Loading</div>
-                    <div class="error-message"></div>
-                    <div class="sent-message">Your message has been sent. Thank you!</div>
-                  </div>
-                  <div class="text-center"><button type="submit">Send Message</button></div>
-                </form>
-
-              </div>
-
-            </div>
-
-          </div>
-        </section><!-- End Contact Section -->
+        </section>End Testimonials Section -->
 
   </main><!-- End #main -->
 
